examples/test/testpolicy11473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11473
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key18: value48
      key39: value14
      key1: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value23
      podSelector:
        matchLabels:
          key20: value39
          key13: value5
